--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-horizontal-scrolling-menu": "^4.0.4",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
